# videoai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  MONITORING_IMPLEMENTATION.md  PROJECT_INVENTORY_REPORT.md  README.md  app.py  auto-sub.yaml  celery_optimization.py  check-db.sh  create_admin_api_key.py  create_frontend_structure.py  docker-compose.api.yml  docker-compose.monitoring.yml  docker-compose.yml  duplicate_dirs.txt  entrypoint.sh  env_files.txt  migrate-api-keys.py  monitoring-requirements.txt  project_structure.txt  pyproject.toml  rebrand_to_videoai.py  regenerate-venv.sh  requirements.txt  requirements.txt.videoai  setup_compliance.sh  start-local.sh  start-workers-docker-improved.sh  start-workers-docker.sh  start-workers.sh  start.sh  sync_test.py  test_fastapi.py  test_integration.py  test_simple_celery.py  test_trim_join.py  video-ai.yaml
.github/workflows/: docker-publish.yml  docker-publish.yml.disabled
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
alembic/versions/: 001_create_media_tasks.py  create_image_provider_tables.py
app/: __init__.py  __main__.py
app/api/: compliance_routes.py  router.py
app/core/: auth.py  celery.py  config.py
app/models/: base_task.py  image_provider.py
docs/: MEDIA_TASKS_SYSTEM.md  PROMPT_TESTING_SYSTEM.md
examples/: batch_processing_example.py  gpt4_vision_example.py  prompt_testing_demo.py
scripts/: setup_monitoring.sh
videoai/: .gitignore  Dockerfile  LICENSE  MONITORING_GUIDE.md  README.md  app_api_only.py  compliance-requirements.txt  create_admin_api_key.py  docker-compose.yml  entrypoint.sh  health_check.py  simple_test.py  start-workers-docker-improved.sh  start-workers-docker.sh  start.sh  test_async_demo.py  test_async_video.py  test_compliance.py  test_compliance_only.py  video_worker.py  worker.py
(+106 files in other folders)
